
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int yeah ;
struct TYPE_2__ {void* s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;


 int AF_INET ;
 void* INADDR_NONE ;
 int PORT ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 void* inet_addr (char*) ;
 int memcpy (char*,int ,int ) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;

int cnx(char *host)
{
 int sock;
 struct sockaddr_in yeah;
 struct hostent *she;

 sock=socket(AF_INET,SOCK_STREAM,0);
 if(!sock) {
  printf("error: unable to create socket\r\n");
  return 0;
  }
 yeah.sin_family=AF_INET;
 yeah.sin_addr.s_addr=inet_addr(host);
 yeah.sin_port=htons(PORT);

if((she=gethostbyname(host))!=((void*)0)) {
 memcpy((char *)&yeah.sin_addr,she->h_addr,she->h_length);
 } else {
 if((yeah.sin_addr.s_addr=inet_addr(host))==INADDR_NONE) {
  printf("error: cannot resolve host\r\n");
  return 0;
  }
 }
 printf("[+] Connecting to %-30s ...",host);
 if(connect(sock,(struct sockaddr*)&yeah,sizeof(yeah))!=0) {
  printf("error: connection refused\r\n");
  return 0;
  }
 printf("Done\r\n");
 return sock;
}
